terraform/network/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.your_vpc.id
  
  tags = {
    Name = "igw-jenkins"
  }
}
